# rexy-embedded

./: Jamfile  LICENSE.txt  README  SourceTreeInfo.txt  VersionInfo.txt  doxygen_config
addin/: Jamfile
addin/hangle/: Jamfile  hangle.c  hangle.h  hangle11172.h
addin/registry/: registry.c  registry.h
addin/unicode/: Jamfile  rexy_unicode.c  rexy_unicode.h
application/: Jamfile  application.c  application.h
application/biorhythm/: Jamfile
application/mainmenu/: Jamfile  mainmenu.c  mainmenu.h  mainmenu_anibmp.c  mainmenu_anibmp.h
application/mgl/: Jamfile  app_menu1.c  (+5 more)
control/: Jamfile
core/: Jamfile
doc/: Core.unt  CoreEtc.unt  CoreGDI.unt  CoreMsg.unt  CoreWnd.unt  HAL.unt  Logic.unt  RexyDB Architecture.doc  RexyEmbedded_API_Reference.chm  RexyEmbedded_WhitePaper.doc  rexye.uml
hal/: Jamfile
lib/libungif/lib/: Makefile.am  Makefile.in  dgif_lib.c  egif_lib.c
logic/: Jamfile
resource/: Jamfile  app_bmpdata.c  app_bmpdata.h  app_fontdata.c  rexy_fontdata_Unicode_GulimChe_10x10_Bl_Img.txt  rexy_fontdata_Unicode_GulimChe_10x10_Han_Img.txt  rexy_fontdata_Unicode_GulimChe_10x10_Sl_Img.txt  rexy_fontdata_Unicode_GulimChe_12x12_Bl_Img.txt  rexy_fontdata_Unicode_GulimChe_12x12_Han_Img.txt  rexy_fontdata_Unicode_GulimChe_12x12_Sl_Img.txt  rexy_fontdata_Unicode_GulimChe_14x14_Bl_Img.txt  rexy_fontdata_Unicode_GulimChe_14x14_Han_Img.txt  rexy_fontdata_Unicode_GulimChe_14x14_Sl_Img.txt  rexy_fontdata_Unicode_GulimChe_16x16_BL_Img.txt  rexy_fontdata_Unicode_GulimChe_16x16_Han_Img.txt  rexy_fontdata_Unicode_GulimChe_16x16_SL_Img.txt
test/: Jamfile
(+511 files in other folders)
